--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "erosdiffusion-eulerdiscretescheduler"
+name = "erosdiffusion-eulerflowmatchingdiscretescheduler"
 description = "Noise Free images with Euler Discrete Scheduler in ComfyUI with Z-Image or other models"
-version = "1.0.0"
+version = "1.0.1"
 license = {file = "LICENSE.TXT"} 
 # classifiers = [
 #     # For OS-independent nodes (works on all operating systems)
@@ -24,8 +24,8 @@ Documentation = "https://github.com/erosDiffusion/ComfyUI-EulerDiscreteScheduler
 "Bug Tracker" = "https://github.com/erosDiffusion/ComfyUI-EulerDiscreteScheduler/issues"
 
 [tool.comfy]
-PublisherId = "erosDiffusion"
-DisplayName = "ComfyUI-EulerDiscreteScheduler"
+PublisherId = "erosdiffusion"
+DisplayName = "ComfyUI-EulerFlowMatchingDiscreteScheduler"
 Icon = "💜"
 includes = [] 
 # "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
